--- a/api/composer.json
+++ b/api/composer.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "doctrine/dbal": "^3.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "web-token/jwt-framework": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
@@ -38,8 +40,9 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         },
-        "files":[
-            "app/Helper/helpers.php"
+        "files": [
+            "app/Helper/helpers.php",
+            "app/Helper/JWTHelper.php"
         ]
     },
     "autoload-dev": {
